Gefällt so langsam :-)

--- a/humhub-1.6.4/themes/trnbtl-theme/less/mixins.less
+++ b/humhub-1.6.4/themes/trnbtl-theme/less/mixins.less
@@ -5,3 +5,40 @@
 .flat-border {
     border-radius: 0px;
 }
+
+//
+// Thumbnails
+// --------------------------------------------------
+.img-rounded {
+    -webkit-border-radius: 50%;
+    -moz-border-radius   : 50%;
+    border-radius        : 50%;
+}
+
+.calendar-entry-participants {
+    font-size    : 14px;
+    margin-top   : 15px;
+    margin-bottom: 10px;
+}
+
+.calendar-entry-participants-heading {
+    margin-bottom: 10px;
+    font-size  : 14px !important;
+    font-weight: 800 !important;
+}
+
+.calendar-entry-participants-status {
+
+    a {
+        
+        font-size  : 14px !important;
+        font-weight: 600 !important;
+    }
+
+    a:hover,
+    a:visited,
+    a:hover,
+    a:focus {
+        cursor: pointer;
+    }
+}
