progress progress progress

--- a/humhub-1.6.4/assets/851a72fe/less/theme.less
+++ b/humhub-1.6.4/assets/851a72fe/less/theme.less
@@ -2,14 +2,6 @@
  * Define or overwrite your theme selectors within this file.
 **/
 
-.panel {
-  .flat-border();
-}
-
-.panel .panel-heading {
-  .flat-border();
-}
-
-.nav-pills>li>a{
-  .flat-border()
-}
+// .nav-pills>li>a{
+//   .flat-border()
+// }
