--- a/humhub-1.6.4/themes/trnbtl-theme/less/variables.less
+++ b/humhub-1.6.4/themes/trnbtl-theme/less/variables.less
@@ -11,20 +11,12 @@
 // Black Is Beautiful Forever
 @default: #ededed;
 @primary: #585858;
-@info: #a96e3b;
+@info: #86090A;// #C2AD77;
 @success: #274637;
-@warning: #fdd198;
-@danger: #5c2b63;
+@warning: #C2AD77;
+@danger:#86090A;
 
-
-// Name: Charleston Green #2d2b2c
-// Name: Davy's Grey #585858
-// Name: Light Silver #d6d6d6
-// Outer Space (Crayola) #274637
-// Dark Gold #a96e3b
-// Imperial #5c2b63
-
-
+// https://www.schemecolor.com/house-lannister-game-of-thrones.php
 // 
 // Text color
 // --------------------------------------------------
@@ -79,8 +71,8 @@
 
 // Alert box success (used in forms)
 @background-color-success: #f7fbf4;
-@text-color-success: #84be5e;
-@border-color-success: #97d271;
+@text-color-success: #274637;
+@border-color-success: #274637;
 
 // Alert box warning (used in forms)
 @background-color-warning: #fffbf7;
@@ -89,8 +81,8 @@
 
 // Alert box danger (used in forms)
 @background-color-danger: #fff6f6;
-@text-color-danger:  #ff8989;
-@border-color-danger: #ff8989;
+@text-color-danger:  #86090A;
+@border-color-danger: #86090A;
 
 //
 // Fonts
