--- a/humhub-1.6.4/assets/851a72fe/less/build.less
+++ b/humhub-1.6.4/assets/851a72fe/less/build.less
@@ -16,5 +16,11 @@
 // Define mixins
 @import "mixins.less";
 
+
+@import "topbar.less";
+@import "form.less";
+@import "panel.less";
+
+
 // Define/Overwrite selectors here
 @import "theme.less";
