--- a/humhub-1.6.4/assets/851a72fe/less/variables.less
+++ b/humhub-1.6.4/assets/851a72fe/less/variables.less
@@ -1,30 +1,31 @@
-/**
- * Define or overwrite your theme variables here.
- *
- * Check for @humhub/static/less/variables.less file for all available variables.
- * 
- * You can also access your variables within your view files by calling Yii::$app->view->theme->variable('myVariable');
- *
- * You can disable the import of humhub theme components by using variables of the format @prev-{component} e.g.:
- * This will prevent comment.less component from beeing imported.
- * e.g.:
- * @prev-comment: true;
- *
-**/
-
-
 //
 // Colors for buttons status etc.
 // --------------------------------------------------
-@default: red;
-@primary: black;
-@info: #3b0d99;
-@success: #97d271;
+// @default: #ededed;
+// @primary: #708fa0;
+// @info: #C2AD77;
+// @success: #97d271;
+// @warning: #fdd198;
+// @danger: #ff8989;
+
+// Black Is Beautiful Forever
+@default: #ededed;
+@primary: #585858;
+@info: #a96e3b;
+@success: #274637;
 @warning: #fdd198;
-@danger: #ff8989;
+@danger: #5c2b63;
 
 
-//
+// Name: Charleston Green #2d2b2c
+// Name: Davy's Grey #585858
+// Name: Light Silver #d6d6d6
+// Outer Space (Crayola) #274637
+// Dark Gold #a96e3b
+// Imperial #5c2b63
+
+
+// 
 // Text color
 // --------------------------------------------------
 
