--- a/humhub-1.6.4/themes/trnbtl-theme/less/topbar.less
+++ b/humhub-1.6.4/themes/trnbtl-theme/less/topbar.less
@@ -64,8 +64,21 @@
 
 
     a.navbar-brand {
-        height: 50px;
-        padding: 5px;
+        font-family: "Exo 2", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+        text-transform: uppercase;
+        letter-spacing: 3px;
+        font-size: 20px;
+        font-weight: 600;
+
+        border-top: 2px solid #fff;
+        border-bottom: 2px solid #fff;
+
+        height: 30px;
+        margin: 10px;
+
+        padding-left: 4px;
+        padding-right: 1px;
+        padding-top: 3px;
 
         img#img-logo {
             max-height: 40px;
@@ -73,9 +86,9 @@
 
     }
 
-    a.navbar-brand-text {
-        padding-top: 15px;
-    }
+    // a.navbar-brand-text {
+    //     // padding-top: 15px;
+    // }
 
     .nav > li > a:hover,
     .nav > .open > a {
